[package]
name = "iroh-lab"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.10", features = ["tokio", "image"] }
iroh = "0.33.0"
iroh-gossip = { version = "0.33.0", features = ["rpc"] }
tokio = { version = "1.28.0", features = ["full"] }
async-std = "1.12"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
chrono = { version = "0.4.24", features = ["serde"] }
uuid = { version = "1.3.1", features = ["v4", "serde"] }
anyhow = "1.0"
rand = "0.8"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tempfile = "3.5.0"
futures = "0.3"
